skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_theme_moon.snap
---
source: tests/snapshot_overview.rs
expression: render_with_theme_summary(&model)
---
theme=moon (Rose Pine Moon)
outer=Style::new().fg(Color::Rgb(224, 222, 244)).bg(Color::Rgb(35, 33, 54))
panel=Style::new().fg(Color::Rgb(224, 222, 244)).bg(Color::Rgb(42, 39, 63))
title=Style::new().fg(Color::Rgb(196, 167, 231)).bg(Color::Rgb(42, 39, 63)).bold()
selection=Style::new().fg(Color::Rgb(224, 222, 244)).bg(Color::Rgb(68, 65, 90)).bold()
warning=Style::new().fg(Color::Rgb(246, 193, 119)).bg(Color::Rgb(42, 39, 63)).bold()
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 2h25m  ·  Adhoc 1 · Issue 1 · Workflow 1  ·  4m old  $0.00 · 0 turns · in 0 / out 0              moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Costs │ Daemon                                                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (3 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│Status                    ││Kind    State            Harness    Title          Cost           PR/worktree    Age      Decision                Activity    ││Fix dashboard state reader                │"
"│▸ Needs input        1    ││ISS     Needs input      opencode   Fix dashboard  —              PR #44 · vst-1 1h35m    cleanup-prompt          4m          ││VST-101  ·  Issue  ·  Needs input         │"
"│Submitting         1      ││WF      Submitting       codex      Build Rust das —              —              58m      bash-permission-prompt  4m          ││substate: cleanup prompt                  │"
"│Running            1      ││AH      Running          pi         Watch daemon l —              —              2h10m    —                       4m          ││                                          │"
"│                          ││                                                                                                                              ││Where                                     │"
"│Merge queue               ││                                                                                                                              ││pane    %41                               │"
"│1. VST-101  Needs input   ││                                                                                                                              ││worktree                                  │"
"│2. VST-102  queued        ││                                                                                                                              ││/repo/worktrees/vst-101                   │"
"│                          ││                                                                                                                              ││cwd     /repo/worktrees/vst-101           │"
"│Conflicts                 ││                                                                                                                              ││                                          │"
"│• VST-101 ↔ VST-102       ││                                                                                                                              ││Issue                                     │"
"│                          ││                                                                                                                              ││PR #44                                    │"
"│                          ││                                                                                                                              ││scope declared=5 actual=7 (1.4x bigger    │"
"│                          ││                                                                                                                              ││than declared)                            │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Cost                                      │"
"│                          ││                                                                                                                              ││cost      — (no source)                   │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Recent decisions                          │"
"│                          ││                                                                                                                              ││• cleanup-prompt → NO — sibling worktree  │"
"│                          ││                                                                                                                              ││still live                                │"
"│                          ││                                                                                                                              ││Click any decision for full text          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Actions                                   │"
"│                          ││                                                                                                                              ││[ Focus tmux window ]                     │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   f filters   n noise   s session   d decisions   e export   ? help   q quit                                                        noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
